# bingwallpaper

./: CMakeLists.txt  bing.cpp  bing.hpp  bingwallpaper.desktop  define.hpp  main.cpp  setting.cpp  setting.hpp  timer.hpp  utils.cpp  utils.hpp
debian/: README  changelog  control  copyright  files  preinst  prerm  rules
