PROJECT(BING)

SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ADD_EXECUTABLE(bingwallpaper ${DIR_SRCS})
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
INCLUDE_DIRECTORIES(.)
TARGET_LINK_LIBRARIES(bingwallpaper curl pthread)
INSTALL(TARGETS bingwallpaper
	RUNTIME DESTINATION bin
    )
INSTALL(FILES bingwallpaper.desktop
    DESTINATION /etc/xdg/autostart
)
SET(CMAKE_INSTALL_PREFIX /usr)
